fix display home slide nav bar z-index and position

--- a/src/styles/CircleElement.module.css
+++ b/src/styles/CircleElement.module.css
@@ -1,5 +1,4 @@
 .fancyElement {
-  display: flex;
   justify-content: center;
   align-items: center;
   background-color: azure;
@@ -9,6 +8,8 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  /* position: absolute;
+  z-index: 1; */
 }
 
 .fancyElement img {
